--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+-f https://download.pytorch.org/whl/torch_stable.html
+torch==2.1.0+cpu
+torch==2.1.0
 transformers==4.30.2
 sentence-transformers==2.2.2
-torch==2.0.1
