--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -2,10 +2,13 @@
 FROM ghcr.io/alexgseymour/torch-serve-arm64:latest AS builder
 
 WORKDIR /usr/app
-ADD requirements.txt .
-RUN pip install -r requirements.txt
+ADD requirements-arm64.txt .
+RUN pip install --no-cache-dir -r requirements-arm64.txt
 
 ADD dump_models.py .
+USER root
+RUN chmod a+w .
+USER model-server
 RUN python dump_models.py
 
 ADD handlers/cross_encoder/handler.py handlers/cross_encoder/handler.py
@@ -18,8 +21,8 @@ RUN ./scripts/create-archives.sh
 # Production image
 FROM ghcr.io/alexgseymour/torch-serve-arm64:latest
 
-ADD requirements.txt .
-RUN pip install -r requirements.txt
+ADD requirements-arm64.txt .
+RUN pip install --no-cache-dir -r requirements-arm64.txt
 
 ADD docker/entrypoint.sh entrypoint.sh
 ADD scripts/start-torchserve.sh start-torchserve.sh
