--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -25,6 +25,7 @@ ADD requirements-arm64.txt .
 RUN pip install --no-cache-dir -r requirements-arm64.txt
 
 ADD docker/entrypoint.sh entrypoint.sh
+ADD docker/config.properties config.properties
 ADD scripts/start-torchserve.sh start-torchserve.sh
 
 COPY --from=builder /usr/app/model_store model_store
